# cc_company_red_and_black

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run.py  sample.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
data/: companies.db  companies.db-shm  companies.db-wal
specs/1-company-data-sync/: spec.md
specs/1-company-data-sync/checklists/: requirements.md
src/: __init__.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  cors.py  error_handler.py
src/api/routes/: companies.py  sync.py
src/models/: company.py  database.py  search.py  sync.py
src/scripts/: init_db.py
src/services/: api_client.py  company_service.py  sync_service.py
src/utils/: config.py  exceptions.py  logging.py
tests/contract/: test_companies.py  test_company_detail.py  test_sync.py
tests/unit/: test_api_client.py  test_company_detail.py  test_sync_service.py
